[IMP]Purchase shipment tracking UI

--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -6,37 +6,22 @@
         <field name="arch" type="xml">
             <form string="Purchase Tracking Form">
                 <sheet>
-                    <div class="oe_title">
-                        <h1>
-                            <field name="order_id" readonly="1" force_save="1"/>
-                        </h1>
-                    </div>
+
+                    <field name="order_id" invisible="1"/>
                     <group>
                         <group>
-                            <field name="partner_id"/>
-                            <field name="picking_type_id"/>
-                        </group>
-                        <group>
-                            <field name="date_order" string="Order Date"/>
-                            <field name="date_approve"/>
-                        </group>
-                    </group>
-                    <group>
-                        <group>
-                            <field name="carrier_id"/>
                             <field name="tracking_ref"/>
                             <field name="shipment_date"/>
                         </group>
                         <group>
                             <field name="shipment_name"/>
-                            <field name="status"/>
+
                         </group>
                     </group>
-                    <field name="tracking_line_ids" nolabel="1" context="{'active_id':active_id}">
+                    <field name="tracking_line_ids" nolabel="1">
                         <tree editable="top" create="0">
-                            <field name="po_line_id" readonly="0" force_save="1" invisible="1"/>
-                            <field name="product_id" readonly="1" force_save="1"/>
-                            <field name="ship_qty" string="Shipped Quantity"/>
+                            <field name="po_line_id" readonly="1"/>
+                            <field name="ship_qty"/>
                         </tree>
                     </field>
                 </sheet>
