--- a/bista_purchase/wizard/update_shipment_tracking_views.xml
+++ b/bista_purchase/wizard/update_shipment_tracking_views.xml
@@ -5,46 +5,33 @@
         <field name="model">update.shipment.tracking</field>
         <field name="arch" type="xml">
             <form editable="top" string="Purchase Order Line">
-                <div class="oe_title">
-                    <h1>
-                        <field name="order_id" readonly="1"/>
-                    </h1>
-                </div>
+
+                <field name="order_id" invisible="1"/>
+                <!--                <field name="po_lines" nolabel="1" readonly="1">-->
+                <!--                    <tree>-->
+                <!--                        <field name="product_id"/>-->
+                <!--                        <field name="product_qty"/>-->
+                <!--                        <field name="status"/>-->
+                <!--                    </tree>-->
+                <!--                </field>-->
+
                 <group>
                     <group>
-                        <field name="partner_id"/>
-                        <field name="picking_type_id"/>
+                        <field name="status" required="1"/>
+                        <field name="tracking_ref" required="1"/>
                     </group>
                     <group>
-                        <field name="date_order" string="Order Date"/>
-                        <field name="date_approve"/>
+                        <field name="shipment_date" required="0"/>
+                        <field name="shipment_name" required="0"/>
                     </group>
                 </group>
-<!--                <field name="po_lines" nolabel="1" readonly="1">-->
-<!--                    <tree>-->
-<!--                        <field name="product_id"/>-->
-<!--                        <field name="product_qty"/>-->
-<!--                        <field name="status"/>-->
-<!--                    </tree>-->
-<!--                </field>-->
                 <field name="tracking_lines">
                     <tree editable="bottom" create="0">
                         <field name="checkbox"/>
                         <field name="po_line" readonly="1" force_save="1"/>
-                        <field name="product_qty" string="Ordered Quantity"/>
-                        <field name="status"/>
+                        <field name="ship_qty"/>
                     </tree>
                 </field>
-                <group>
-                    <group>
-                        <field name="status" required="1"/>
-<!--                        <field name="tracking_ref" required="1"/>-->
-                    </group>
-                    <group>
-<!--                        <field name="shipment_date" required="0"/>-->
-<!--                        <field name="shipment_name" required="0"/>-->
-                    </group>
-                </group>
                 <footer>
                     <button name="update" string="Update" type="object" class="btn-primary"/>
                     <button string="Cancel" special="cancel" class="btn btn-primary"/>
@@ -53,7 +40,8 @@
         </field>
     </record>
     <record id="update_shipment_tracking_action" model="ir.actions.act_window">
-        <field name="name">Update PO Line Status</field>
+
+        <field name="name">Update Shipment Tracking</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">update.shipment.tracking</field>
         <field name="view_mode">form</field>
