--- a/bista_purchase/wizard/update_shipment_tracking_views.xml
+++ b/bista_purchase/wizard/update_shipment_tracking_views.xml
@@ -5,7 +5,21 @@
         <field name="model">update.shipment.tracking</field>
         <field name="arch" type="xml">
             <form editable="top" string="Purchase Order Line">
-                <field name="order_id" invisible="1"/>
+                <div class="oe_title">
+                    <h1>
+                        <field name="order_id" readonly="1"/>
+                    </h1>
+                </div>
+                <group>
+                    <group>
+                        <field name="partner_id"/>
+                        <field name="picking_type_id"/>
+                    </group>
+                    <group>
+                        <field name="date_order" string="Order Date"/>
+                        <field name="date_approve"/>
+                    </group>
+                </group>
 <!--                <field name="po_lines" nolabel="1" readonly="1">-->
 <!--                    <tree>-->
 <!--                        <field name="product_id"/>-->
@@ -17,7 +31,7 @@
                     <tree editable="bottom" create="0">
                         <field name="checkbox"/>
                         <field name="po_line" readonly="1" force_save="1"/>
-<!--                        <field name="ship_qty"/>-->
+                        <field name="product_qty" string="Ordered Quantity"/>
                         <field name="status"/>
                     </tree>
                 </field>
@@ -39,7 +53,7 @@
         </field>
     </record>
     <record id="update_shipment_tracking_action" model="ir.actions.act_window">
-        <field name="name">Update Shipment Tracking</field>
+        <field name="name">Update PO Line Status</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">update.shipment.tracking</field>
         <field name="view_mode">form</field>
