--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -139,10 +139,10 @@
         <field name="model">purchase.order.line</field>
         <field name="arch" type="xml">
             <form name="purchase_order_line" string="PO Line" create="false" edit="false">
-                <header>
-                    <field name="status" widget="statusbar"
-                           statusbar_visible="draft,ready_for_preview,ordered,pending,completed" readonly="1"/>
-                </header>
+<!--                <header>-->
+<!--                    <field name="status" widget="statusbar"-->
+<!--                           statusbar_visible="draft,ready_for_preview,ordered,pending,completed" readonly="1"/>-->
+<!--                </header>-->
                 <sheet>
                     <div class="oe_title">
                         <h1>
@@ -168,6 +168,7 @@
                             <field name="disc_price_unit"/>
                             <field name="qty_received"/>
                             <field name="qty_invoiced"/>
+                            <field name="status"/>
                         </group>
                     </group>
                 </sheet>
