--- a/bista_sale/views/stock_picking_view.xml
+++ b/bista_sale/views/stock_picking_view.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="view_picking_withcarrier_out_form_extended" model="ir.ui.view">
-        <field name="name">view.picking.withcarrier.out.form.extended</field>
+    <record id="bista_sale_view_stock_move_operation_tree_" model="ir.ui.view">
+        <field name="name">bista.sale.view.stock.move.operation.tree</field>
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
+            <field name="partner_id" position="after">
+                <field name="sequence_code" invisible="1"/>
+
+            </field>
             <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
                    position="after">
                 <field name="picking_note"/>
+            </xpath>
+            <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
+                   position="after">
+                <field name="publisher_id" attrs="{'column_invisible': [('parent.sequence_code','!=','PICK')]}"/>
+            </xpath>
+        </field>
+    </record>
+    <record id="bista_sale_view_stock_move_line_detailed_operation_tree_" model="ir.ui.view">
+        <field name="name">bista.salestock.move.line.operations.tree.mrp</field>
+        <field name="model">stock.move.line</field>
+        <field name="inherit_id" ref="stock.view_stock_move_line_detailed_operation_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='product_id']" position="after">
+                <field name="publisher_id" attrs="{'column_invisible': [('parent.sequence_code','!=','PICK')]}"/>
             </xpath>
         </field>
     </record>
