--- a/bista_purchase/wizard/update_shipment_tracking_views.xml
+++ b/bista_purchase/wizard/update_shipment_tracking_views.xml
@@ -20,29 +20,31 @@
                         <field name="date_approve"/>
                     </group>
                 </group>
-<!--                <field name="po_lines" nolabel="1" readonly="1">-->
-<!--                    <tree>-->
-<!--                        <field name="product_id"/>-->
-<!--                        <field name="product_qty"/>-->
-<!--                        <field name="status"/>-->
-<!--                    </tree>-->
-<!--                </field>-->
+                <!--                <field name="po_lines" nolabel="1" readonly="1">-->
+                <!--                    <tree>-->
+                <!--                        <field name="product_id"/>-->
+                <!--                        <field name="product_qty"/>-->
+                <!--                        <field name="status"/>-->
+                <!--                    </tree>-->
+                <!--                </field>-->
                 <field name="tracking_lines">
                     <tree editable="bottom" create="0">
                         <field name="checkbox"/>
                         <field name="po_line" readonly="1" force_save="1"/>
                         <field name="product_qty" string="Ordered Quantity"/>
-                        <field name="status"/>
+                        <field name="status_id"/>
                     </tree>
                 </field>
                 <group>
                     <group>
-                        <field name="status" required="1"/>
-<!--                        <field name="tracking_ref" required="1"/>-->
+                        <field name="status_id" required="1"
+                               options="{'no_edit': True, 'no_create': True, 'no_open': True}"
+                               domain="[('manual_update', '!=', False)]"/>
+                        <!--                        <field name="tracking_ref" required="1"/>-->
                     </group>
                     <group>
-<!--                        <field name="shipment_date" required="0"/>-->
-<!--                        <field name="shipment_name" required="0"/>-->
+                        <!--                        <field name="shipment_date" required="0"/>-->
+                        <!--                        <field name="shipment_name" required="0"/>-->
                     </group>
                 </group>
                 <footer>
