--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -6,15 +6,15 @@
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']//tree" position="inside">
-                <field name="status"/>
+                <field name="status_id"/>
                 <button name="open_po_line" type="object" icon="fa-eye" class="btn btn-link" style="float:right"/>
             </xpath>
-<!--            <xpath expr="//page[@name='products']/field[@name='order_line']" position="before">-->
-<!--                <button name="update_po_lines" string="Update PO Lines" type="object" class="btn-primary"/>-->
-<!--            </xpath>-->
+            <!--            <xpath expr="//page[@name='products']/field[@name='order_line']" position="before">-->
+            <!--                <button name="update_po_lines" string="Update PO Lines" type="object" class="btn-primary"/>-->
+            <!--            </xpath>-->
 
-<!--            <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">-->
-<!--            </xpath>-->
+            <!--            <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">-->
+            <!--            </xpath>-->
             <xpath expr="//div[hasclass('oe_clear')]" position="before">
                 <group name="special_pick_note" col="6" class="mt-2 mt-md-0">
                     <group colspan="4">
@@ -145,24 +145,24 @@
         <field name="arch" type="xml">
             <form name="purchase_order_line" string="PO Line" create="false" edit="false">
 
-<!--                <header>-->
-<!--                    <field name="status" widget="statusbar"-->
-<!--                           statusbar_visible="draft,ready_for_preview,ordered,pending,completed" readonly="1"/>-->
-<!--                </header>-->
+                <!--                <header>-->
+                <!--                    <field name="status" widget="statusbar"-->
+                <!--                           statusbar_visible="draft,ready_for_preview,ordered,pending,completed" readonly="1"/>-->
+                <!--                </header>-->
                 <sheet>
                     <div class="oe_title">
                         <h1>
                             <field name="order_id"/>
                         </h1>
                     </div>
-<!--                    <group>-->
-<!--                        <field name="name"/>-->
-<!--                    </group>-->
+                    <!--                    <group>-->
+                    <!--                        <field name="name"/>-->
+                    <!--                    </group>-->
                     <group>
                         <group>
                             <field name="product_id"/>
                             <field name="product_qty"/>
-<!--                            <field name="product_uom"/>-->
+                            <!--                            <field name="product_uom"/>-->
 
                             <field name="price_unit"/>
                             <field name="discount"/>
@@ -174,7 +174,7 @@
                             <field name="disc_price_unit"/>
                             <field name="qty_received"/>
                             <field name="qty_invoiced"/>
-                            <field name="status"/>
+                            <field name="status_id"/>
                         </group>
                     </group>
                 </sheet>
@@ -186,4 +186,45 @@
             </form>
         </field>
     </record>
+    <record id="po_status_line_form_view" model="ir.ui.view">
+        <field name="name">po_status_line_form_view</field>
+        <field name="model">po.status.line</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <div class="oe_title">
+                        <label for="name"/>
+                        <h1>
+                            <field name="name"/>
+                        </h1>
+                    </div>
+                    <group>
+                        <field name="manual_update" string="Manually Update ?"/>
+                        <field name="active" invisible="1"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    <record id="po_status_line_tree_view" model="ir.ui.view">
+        <field name="name">po.status.tree.view</field>
+        <field name="model">po.status.line</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="sequence" widget="handle"/>
+                <field name="name"/>
+                <field name="manual_update" invisible="1"/>
+            </tree>
+        </field>
+    </record>
+    <record id="po_status_line_action" model="ir.actions.act_window">
+        <field name="name">Po Status Line</field>
+        <field name="res_model">po.status.line</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+
+    <menuitem id="po_status_line_menu" name="Status" action="po_status_line_action"
+              parent="purchase.menu_unit_of_measure_in_config_purchase" sequence="11"/>
+
 </odoo>
