--- a/bista_bigcommerce_extend/views/res_partner_view_extend.xml
+++ b/bista_bigcommerce_extend/views/res_partner_view_extend.xml
@@ -7,7 +7,7 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='top_publisher']" position="before">
+                <xpath expr="//field[@name='vat']" position="after">
                     <field name="is_author"/>
                     <field name="is_publisher"/>
                 </xpath>
