--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -10,7 +10,7 @@
                 <field name="picking_note"/>
             </xpath>
 
-             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="after">
+             <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="after">
                 <field name="tracking_ref"/>
             </xpath>
 
