--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -28,24 +28,41 @@
                             <field name="shipment_date"/>
                         </group>
                         <group>
-                            <field name="shipment_name"/>
-
+                            <field name="pro_number"/>
                             <field name="status"/>
                         </group>
                     </group>
-                    <field name="tracking_line_ids" nolabel="1" context="{'active_id':active_id}">
-                        <tree editable="top" create="0">
-                            <field name="po_line_id" readonly="0" force_save="1" invisible="1"/>
-                            <field name="product_id" readonly="1" force_save="1"/>
-                            <field name="ship_qty" string="Shipped Quantity"/>
-                        </tree>
-                    </field>
+                    <notebook>
+                        <page name="trackings" string="Trackings">
+                            <field name="tracking_ref_ids" nolabel="1">
+                                <tree editable="bottom" create="1">
+                                    <field name="name"/>
+                                    <field name="link" widget="url"/>
+                                </tree>
+                            </field>
+                        </page>
+                        <page name="products" string="Products">
+                            <field name="tracking_line_ids" nolabel="1" context="{'active_id':active_id}">
+                                <tree editable="bottom" create="0" delete="0" default_order="ship_qty desc">
+                                    <field name="checkbox" readonly="0" nolabel="1"/>
+                                    <field name="po_line_id" readonly="1" force_save="1" invisible="0"/>
+                                    <field name="product_id" readonly="1" force_save="1" invisible="1"/>
+                                    <field name="order_qty"/>
+                                    <field name="ship_qty" string="Shipped Quantity"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids"/>
                     <field name="activity_ids"/>
                     <field name="message_ids"/>
                 </div>
+                <footer>
+                    <button string="Save" type="object" class="btn-primary" name="save"/>
+                    <button string="Cancel" class="btn-secondary" special="cancel"/>
+                </footer>
             </form>
         </field>
     </record>
@@ -54,10 +71,10 @@
         <field name="name">purchase.tracking.tree</field>
         <field name="model">purchase.tracking</field>
         <field name="arch" type="xml">
-            <tree string="Purchase Tracking Tree" create="1">
+            <tree string="Purchase Tracking Tree" create="0">
                 <field name="tracking_ref"/>
                 <field name="shipment_date"/>
-                <field name="shipment_name"/>
+                <field name="pro_number"/>
             </tree>
         </field>
     </record>
