--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -73,7 +73,7 @@
                         <br/>
                         <strong>Valid Until:</strong>
                         <t t-if="doc.state in ['draft','sent']">
-                            <t t-esc="doc.valid_until"/>
+                            <t t-esc="doc.validity_date"/>
                         </t>
                         <br/>
                         <strong>Salesperson:</strong>
