--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -6,9 +6,9 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <!--Picking notes-->
-            <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">
+            <!-- <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">
                 <field name="picking_note"/>
-            </xpath>
+            </xpath> -->
 
              <xpath expr="//field[@name='order_line']/tree/field[@name='price_subtotal']" position="after">
                 <field name="tracking_ref"/>
@@ -32,7 +32,7 @@
 
 
             <!--Common Picking Note-->
-            <xpath expr="//group[@name='note_group']" position="after">
+            <!-- <xpath expr="//group[@name='note_group']" position="after">
                 <group name="common_note" col="6" class="mt-2 mt-md-0">
                     <group colspan="4">
                         <field name="common_pick_note"
@@ -40,7 +40,7 @@
                                placeholder="Special Instructions and Notes..."/>
                     </group>
                 </group>
-            </xpath>
+            </xpath> -->
 
             <xpath expr="//notebook/page[@name='other_information']" position="after">
                 <page string="Order Notes" name="order_notes">
