--- a/bista_sale/views/stock_picking_view.xml
+++ b/bista_sale/views/stock_picking_view.xml
@@ -10,10 +10,10 @@
                 <field name="sequence_code" invisible="1"/>
 
             </field>
-            <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
+            <!-- <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
                    position="after">
                 <field name="picking_note"/>
-            </xpath>
+            </xpath> -->
             <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
                    position="after">
                 <field name="publisher_id" attrs="{'column_invisible': [('parent.sequence_code','!=','PICK')]}"/>
