--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -24,11 +24,11 @@
                     <group>
                         <group>
                             <field name="carrier_id"/>
-                            <field name="tracking_ref"/>
-                            <field name="shipment_date"/>
+                            <field name="tracking_ref" required="1"/>
+                            <field name="shipment_date" required="1"/>
                         </group>
                         <group>
-                            <field name="pro_number"/>
+                            <field name="pro_number" string="PRO No."/>
                             <field name="status"/>
                         </group>
                     </group>
@@ -59,10 +59,10 @@
                     <field name="activity_ids"/>
                     <field name="message_ids"/>
                 </div>
-                <footer>
-                    <button string="Save" type="object" class="btn-primary" name="save"/>
-                    <button string="Cancel" class="btn-secondary" special="cancel"/>
-                </footer>
+<!--                <footer>-->
+<!--                    <button string="Save" type="object" class="btn-primary" name="save"/>-->
+<!--                    <button string="Cancel" class="btn-secondary" special="cancel"/>-->
+<!--                </footer>-->
             </form>
         </field>
     </record>
@@ -72,9 +72,11 @@
         <field name="model">purchase.tracking</field>
         <field name="arch" type="xml">
             <tree string="Purchase Tracking Tree" create="0">
-                <field name="tracking_ref"/>
-                <field name="shipment_date"/>
-                <field name="pro_number"/>
+                <field name="tracking_ref" required="1"/>
+                <field name="shipment_date" required="1" optional="show"/>
+                <field name="carrier_id" optional="show"/>
+                <field name="pro_number" optional="show"/>
+                <field name="status" optional="hide"/>
             </tree>
         </field>
     </record>
