[Add] remarks/picking note in sale multi ship line

--- a/bista_stock_remarks/views/sale_order.xml
+++ b/bista_stock_remarks/views/sale_order.xml
@@ -20,6 +20,10 @@
                     </group>
                 </group>
             </xpath>
+
+            <xpath expr="//field[@name='sale_multi_ship_qty_lines']/tree/field[@name='so_line_id']" position="after">
+                <field name="picking_note"/>
+            </xpath>
         </field>
     </record>
 </odoo>
