[FIX]Fixed Bug #17420 ,Bug #17417, Bug #17416, Bug #17254 updated multi shipment functionality.

--- a/bista_sale_multi_ship/views/res_partner_view.xml
+++ b/bista_sale_multi_ship/views/res_partner_view.xml
@@ -67,7 +67,7 @@
                 </div>
                 <sheet>
                     <group>
-                        <group string="Personal Information">
+                        <group string="Baisc Information">
                             <field name="multi_ship_id" invisible="1"
                                    attrs="{'readonly':[('state', '=', 'verified')]}"/>
                             <field name="company_type" invisible="1"/>
