--- a/bista_report_header_footer/report/report_header_footer_view.xml
+++ b/bista_report_header_footer/report/report_header_footer_view.xml
@@ -56,7 +56,8 @@
                     <span style="margin-right: 15px;margin-left:15px;" t-field="company.partner_id.street"/>
                     |
                     <span style="margin-left: 15px;" t-field="company.partner_id.city"/>
-                    <span style="margin-right: 15px;" t-field="company.partner_id.state_id.code"/>
+                    <span t-field="company.partner_id.state_id.code"/>
+                    ,
                     <span style="margin-right: 15px;" t-field="company.partner_id.zip"/>
                     |
                     <span style="margin-left: 15px;margin-right: 15px;" t-field="company.partner_id.phone"/>
