--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -37,9 +37,9 @@
                 <field name="client_order_ref"/>
             </xpath>
 
-<!--            <xpath expr="//field[@name='partner_id']" position="after">-->
-<!--                <field name="due_amount"/>-->
-<!--            </xpath>-->
+            <xpath expr="//field[@name='partner_id']" position="after">
+                <field name="due_amount"/>
+            </xpath>
 
             <xpath expr="//group/group[@name='sales_person']/field[@name='client_order_ref']" position="replace">
             </xpath>
@@ -135,6 +135,20 @@
                         </group>
                         <group>
                             <field name="placed_from_ip"/>
+                        </group>
+                    </group>
+                </page>
+            </xpath>
+             <xpath expr="//notebook/page[@name='project_fulfilment_trac']" position="after">
+                <page string="Order Details">
+                    <group>
+                        <group name="order_details">
+                            <field name='refer_by_company'/>
+                            <field name='refer_by_person'/>
+                        </group>
+                        <group>
+                            <field name="account_order_standing"/>
+                            <field name="customer_email_add"/>
                         </group>
                     </group>
                 </page>
