--- a/bista_purchase/views/res_partner_views.xml
+++ b/bista_purchase/views/res_partner_views.xml
@@ -16,7 +16,7 @@
                 <attribute name="string">Name</attribute>
             </xpath>
             <xpath expr="//field[@name='child_ids']//form//field[@name='name']" position="after">
-                <field name="is_primary"/>
+                <field name="is_primary" attrs="{'invisible':[('type','not in',['contact'])]}"/>
             </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button class="oe_stat_button" name="open_partner_products" icon="fa-th-list" type="object">
